; ModuleID = '/home/carl/AnghaBench/disque/src/extr_server.c_updateDictResizePolicy.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_server.c_updateDictResizePolicy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @updateDictResizePolicy() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %2 = icmp eq i32 %1, -1
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @dictEnableResize()
  br label %7

5:                                                ; preds = %0
  %6 = call i32 (...) @dictDisableResize()
  br label %7

7:                                                ; preds = %5, %3
  ret void
}

declare dso_local i32 @dictEnableResize(...) #1

declare dso_local i32 @dictDisableResize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
